# troupe

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  test.rs
tests/: tests.rs
tests/fails/: empty.stderr
tests/successes/: example.rs
troupe-macro/: Cargo.toml
troupe-macro/src/: actor_decl.rs  attributes.rs  infotype.rs  lib.rs  macros.rs  namerewriter.rs  performance.rs  role.rs  spawning_function.rs  types.rs
troupe-macro/tests/fails/: empty.rs  missing_data.rs  missing_data.stderr  multiple_data.rs  multiple_data.stderr
