[package]
name = "troupe"
version = "0.1.0"
edition = "2021"
authors = ["Ewan Mount <ejmount@users.noreply.github.com>"]

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.56"
quote = "1.0.26"
syn = { version = "2.0.15", features = ["full"] }
trybuild = "1.0.80"
