[package]
name = "troupe"
edition = "2021"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[workspace.package]
version = "0.1.0"
authors = ["Ewan Mount <ejmount@users.noreply.github.com>"]
description = "A short description of my package"

[dependencies]
async-trait = "0.1.68"
tokio = { version = "1.27.0", features = ["time", "sync", "net", "io-util"] }

troupe-macro = { path = "troupe-macro" }
