[package]
name = "troupe-macro"
version.workspace = true
authors.workspace = true
description.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.56"
quote = "1.0.26"
syn = { version = "2.0.15", features = ["full"] }
trybuild = "1.0.80"
convert_case = "0.6.0"